update readme, adjust tableView properties